# marin-experiments

./: .gitignore  AGENTS.md  README.md
.agents/docs/: multi-stage.md
speech-asr/: README.md  audio_tokens.py  bpe.py  launch.py  pyproject.toml  train.py
tiny-stories/: README.md  launch.py  pyproject.toml  train.py
tiny-tpu/: launch.py  model.py  pyproject.toml  train.py
